<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/createcard_title_hint"
        android:ems="10"
        android:id="@+id/editText_cardtitle"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:hint="@string/createcard_detail_hint"
        android:ems="10"
        android:id="@+id/editText_carddetail"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:text="@string/createcard_color_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView_color_background"
        android:layout_marginTop="10dp"/>

    <com.rtugeek.android.colorseekbar.ColorSeekBar
        android:id="@+id/colorSlider_background"
        android:layout_width="match_parent"
        app:colors="@array/seekbar_colors"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/createcard_color_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_marginTop="10dp"/>

    <com.rtugeek.android.colorseekbar.ColorSeekBar
        android:id="@+id/colorSlider_text"
        android:layout_width="match_parent"
        app:colors="@array/seekbar_colors"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/createcard_preview"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/textView_card_preview"
        android:layout_marginTop="10dp"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel"
            android:id="@+id/button_cancel"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@android:string/ok"
            android:id="@+id/button_ok"
            />
    </LinearLayout>


</LinearLayout>
