<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.archsorceress.cardkeeper.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_all_cards"/>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:src="@android:drawable/ic_menu_add"
        fab:fab_colorNormal="@color/colorAccent"
        fab:fab_colorPressed="@color/colorAccentPressed"
        fab:fab_colorRipple="@color/colorRipple">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_item_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_gallery"
            fab:fab_size="mini"
            fab:fab_label="@string/action_gallery"
            android:onClick="onGalleryButtonClick"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_item_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_camera"
            fab:fab_size="mini"
            fab:fab_label="@string/action_camera"
            android:onClick="onCameraButtonClick"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_item_qrcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_qrcode"
            fab:fab_size="mini"
            fab:fab_label="@string/action_qrcode"
            android:onClick="onQRCodeButtonClick"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_item_barcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_barcode"
            fab:fab_size="mini"
            fab:fab_label="@string/action_barcode"
            android:onClick="onBarcodeButtonClick"/>

    </com.github.clans.fab.FloatingActionMenu>

</android.support.design.widget.CoordinatorLayout>
